webapp overflow fixed

--- a/client/style.css
+++ b/client/style.css
@@ -1,12 +1,13 @@
 *{
     margin: 0;
-    padding: 0%;
+    padding: 0;
     box-sizing: border-box;
 }
+body,html{
+    width: 1500px;
+    overflow-x: hidden;
+}
 
-/* body{
-    /* background-color: black;
-} */
 
 header {
 /* added new style  */
@@ -1062,7 +1063,7 @@ line-height: 26px; /* 162.5% */
 }
 .comment-profile > img{
 /* added styling  */
-/* width: 100%vw; */
+/* width: 100%vw;pp */
 position: relative;
 top: 0.1em;
 left: -0.1em;
@@ -1191,6 +1192,8 @@ line-height: normal;
 @media (max-width :576px){
     body{
         max-width: 100vw;
+        /* width: 1500px;
+        overflow-x: hidden; */
     }
     nav ul{
         display: none;
